--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-*{
+    *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -7,7 +7,6 @@ body{
     background-color: #112433;
     font-family: "Jersey 20",sans-serif;
 }
-/* header styling */
 header{
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
 }
@@ -78,84 +77,150 @@ nav ul li a:hover{
 }
 
 
-/* hero styling */
-
-
-
-/* about styling */
-
-
-
-
-/* agenda styling */
-
-
-
-
-/* faq styling */
-
-
-#faq{
-    display: flex;
-    flex-direction: column;
-    color: white;
-    gap: 4rem;
-    padding: 2rem 0;
+.section-title {
+  color:#5FBFBD; 
+  font-family: "Press Start 2P", system-ui;
+  font-weight: 400;
+  font-style: normal;
+   color: #5FBFBD; /* couleur néon verte */
+      text-shadow: 
+       
+      
+        0 0 40px #5FBFBD;
+        position: absolute;  /* permet de placer le texte par-dessus */
+        
+  margin-left: 250px; /* décalage à droite */
+  margin-top: 50px;  /* décalage vers le bas */
+  display: inline-block;
+border-bottom: 2px solid #e8610d; /* ligne néon verte */
+  padding-bottom: 5px;
+  
+  
 }
-.faq-title{
-    align-self: center;
-    font-size: 48px;
-    color: #5FBFBD;
-    padding: 0 1rem;
-    border-bottom: 3px solid #ED6C1E;
-    font-family: 'Press Start 2p',sans-serif;
-}
-.faq-container{
-    font-size: 1.7rem;
-    margin: 0 2rem;
-    background: rgba(204, 208, 207, 0.1);
-    backdrop-filter: blur(10px); 
-    border-radius: 30px;
-    padding: 45px 40px;
+.box{
+ ;
+    background: #000A1F;
+    height: 510px;
+    aspect-ratio: 2/1;
+    border-radius: 50px;
     border: 1px solid #5FBFBD;
-}
-.qstn{
-    border-bottom: 1.5px solid #ED6C1E;
-}
-.question{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.qst{
-    padding: 1rem 0;
-}
-.answer{
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.4s ease;
-    font-family: 'Orbitron',sans-serif;
-    font-size: 18px;
-}
-.answer.active {
-    max-height: 500px; 
-}
+  box-shadow: 0 0 10px #5FBFBD,
+  0 0 20px #5FBFBD,
+  inset 0 0 10px #5FBFBD;
+  transition: 0.5s;
 
-.reveal{
-    border: 3px solid #5FBFBD;
-    display: inline-block;
-    padding: 3px;
-    border-radius: 5px;
+   position: absolute;
+    margin-left: 110px; /* décalage à droite */
+     margin-top: 185px;  /* décalage vers le bas */
+  D
 }
-.reveal img {
-    transition: transform 0.3s ease;
-}
-
-.reveal img.rotate {
-    transform: rotate(180deg);
+.box:hover{
+    transform:scale(1.1) ;
+    box-shadow: 0 0 15px #ED6C1E,
+    0 0 30px #ED6C1E,
+inset 0 0 15px #ED6C1E;
+border-color: #ED6C1E;
+background: #000A1F;
 }
 
 
-/* sponsors styling */
+.box img:nth-child(1) {
+    width: 270px;
+    height: auto;
+       margin-top: 50px;  /* décalage vers le bas */
+    margin-left: 510px; /* décalage à droite */
+position: absolute;
+}
+.box img:nth-child(2) {
+    width: 1040px;
+    position: absolute;
+    height: 520px;
+}
+.box img:nth-child(3){
+    width: 115px;
+    height: auto;
+    margin-top: 19px;
+    margin-left: 255px;
+}
+.box h1:nth-child(4){
+    color: #ED6C1E;
+    width: 155px;
+    height: auto;
+    margin-left: 455px;
+margin-top: 10px;
+ font-family: "Jersey 20", sans-serif;
+  font-weight: 420;
+  font-style: normal;
+   color: #ED6C1E; /* couleur néon verte */
+      text-shadow:
+       0 0 40px #ED6C1E;
+}
+.box p:nth-child(5){
+    .blanc {
+        color: white;
+         font-family: "Jersey 20", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+    }
+    .orange {
+        color: #ED6C1E;
+         font-family: "Jersey 20", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+    }
+    margin-left: 460px;
+    margin-top: 20px;
+     
 
-/* Contact Us styling */
+}
+.box p:nth-child(6){
+    color: white;
+    size: 40px;
+    margin-top: 18px;
+    margin-left: 464px;
+     font-family: "Jersey 20", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.box img:nth-child(7){
+    width: 48px;
+    height: auto;
+    margin-top: 40px;
+margin-left: 310px;
+ cursor: pointer !important;
+
+    
+}
+.box img:nth-child(8){
+  width: 48px;
+    height: auto;
+    margin-top: 40px;
+margin-left: 36px;
+   cursor: pointer !important;
+}
+.box img:nth-child(9){
+  width: 48px;
+    height: auto;
+    margin-top: 40px;
+margin-left: 36px;   
+ cursor: pointer !important;
+
+}
+.box img:nth-child(10){
+  width: 48px;
+    height: auto;
+    margin-top: 40px;
+margin-left: 36px; 
+ cursor: pointer !important;   
+}
+.box img:nth-child(11){
+  width: 48px;
+    height: auto;
+    margin-top: 40px;
+margin-left: 36px;
+ cursor: pointer !important;    
+}
+
+
+
+
