--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 body{
     background-color: #112433;
     font-family: "Jersey 20",sans-serif;
+    overflow-x: hidden;
 }
 /* header styling */
 header{
@@ -102,10 +103,14 @@ nav ul li a:hover{
     gap: 4rem;
     padding: 2rem 0;
 }
-.faq-title{
+.faq-title, .titlee{
     align-self: center;
     font-size: 48px;
     color: #5FBFBD;
+    text-shadow: 
+       
+      
+        0 0 40px #5FBFBD;
     padding: 0 1rem;
     border-bottom: 3px solid #ED6C1E;
     font-family: 'Press Start 2p',sans-serif;
@@ -157,5 +162,190 @@ nav ul li a:hover{
 
 
 /* sponsors styling */
-
+#sponsors{
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+    padding: 2rem 0;
+}
+.sponsor-container{
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+}
+.sponsor-carousel{
+    width: 100vw; 
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+}
+.line1{
+    display: flex;
+    gap: 200px;
+    width: max-content; 
+    animation: moveLeft linear infinite;
+}
+@keyframes moveLeft {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-50%); /* adjust based on content width */
+    }
+}
+.line2{
+    display: flex;
+    justify-content: space-evenly;
+}
+.line3{
+    display: flex;
+    gap: 180px;
+    align-self: center;
+}
+.sp{
+    height: 200px;
+    width: 200px;
+}
 /* Contact Us styling */
+.section-title {
+  color:#5FBFBD; 
+  font-family: "Press Start 2P", system-ui;
+  font-weight: 400;
+  font-style: normal;
+   color: #5FBFBD; /* couleur néon verte */
+      text-shadow: 
+       
+      
+        0 0 40px #5FBFBD;
+        position: absolute;  /* permet de placer le texte par-dessus */
+        
+  margin-left: 250px; /* décalage à droite */
+  margin-top: 50px;  /* décalage vers le bas */
+  display: inline-block;
+border-bottom: 2px solid #e8610d; /* ligne néon verte */
+  padding-bottom: 5px;
+  
+  
+}
+.box{
+    background: #000A1F;
+    height: 510px;
+    aspect-ratio: 2/1;
+    border-radius: 50px;
+    border: 1px solid #5FBFBD;
+  box-shadow: 0 0 10px #5FBFBD,
+  0 0 20px #5FBFBD,
+  inset 0 0 10px #5FBFBD;
+  transition: 0.5s;
+
+   position: absolute;
+    margin-left: 110px; /* décalage à droite */
+     margin-top: 185px;  /* décalage vers le bas */
+  
+}
+.box:hover{
+    transform:scale(1.1) ;
+    box-shadow: 0 0 15px #ED6C1E,
+    0 0 30px #ED6C1E,
+inset 0 0 15px #ED6C1E;
+border-color: #ED6C1E;
+background: #000A1F;
+}
+
+
+.box img:nth-child(1) {
+    width: 270px;
+    height: auto;
+       margin-top: 50px;  /* décalage vers le bas */
+    margin-left: 510px; /* décalage à droite */
+position: absolute;
+}
+.box img:nth-child(2) {
+    width: 1040px;
+    position: absolute;
+    height: 520px;
+}
+.box img:nth-child(3){
+    width: 115px;
+    height: auto;
+    margin-top: 19px;
+    margin-left: 255px;
+}
+.box h1:nth-child(4){
+    color: #ED6C1E;
+    width: 155px;
+    height: auto;
+    margin-left: 455px;
+margin-top: 10px;
+ font-family: "Jersey 20", sans-serif;
+  font-weight: 420;
+  font-style: normal;
+   color: #ED6C1E; /* couleur néon verte */
+      text-shadow:
+       0 0 40px #ED6C1E;
+}
+.box p:nth-child(5){
+    .blanc {
+        color: white;
+         font-family: "Jersey 20", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+    }
+    .orange {
+        color: #ED6C1E;
+         font-family: "Jersey 20", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+    }
+    margin-left: 460px;
+    margin-top: 20px;
+     
+
+}
+.box p:nth-child(6){
+    color: white;
+    size: 40px;
+    margin-top: 18px;
+    margin-left: 464px;
+     font-family: "Jersey 20", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.box img:nth-child(7){
+    width: 48px;
+    height: auto;
+    margin-top: 40px;
+margin-left: 310px;
+ cursor: pointer !important;
+
+    
+}
+.box img:nth-child(8){
+  width: 48px;
+    height: auto;
+    margin-top: 40px;
+margin-left: 36px;
+   cursor: pointer !important;
+}
+.box img:nth-child(9){
+  width: 48px;
+    height: auto;
+    margin-top: 40px;
+margin-left: 36px;   
+ cursor: pointer !important;
+
+}
+.box img:nth-child(10){
+  width: 48px;
+    height: auto;
+    margin-top: 40px;
+margin-left: 36px; 
+ cursor: pointer !important;   
+}
+.box img:nth-child(11){
+  width: 48px;
+    height: auto;
+    margin-top: 40px;
+margin-left: 36px;
+ cursor: pointer !important;    
+}
